_docs/v0.23/administration-guide/start.md
---
version: v0.23
category: Administration-Guide
title: Start
source_url: 'https://github.com/metabase/metabase/blob/master/docs/administration-guide/start.md'
layout: docs
---

## Administration Guide

Are you in charge of managing Metabase for your organization? Then you're in the right spot. You are the chosen one.

**This guide will teach you about:**

* [Connecting Metabase to databases in your organization](01-managing-databases.html)
* [Enabling features that send email (SMTP)](02-setting-up-email.html)
* [Editing your database metadata](03-metadata-editing.html)
* [Managing user accounts](04-managing-users.html)
* [Setting data permissions](05-setting-permissions.html)
* [Creating and managing collections](06-collections.html)
* [Creating segments and metrics](07-segments-and-metrics.html)
* [Configuring settings](08-configuration-settings.html)
* [Setting up Slack integration](09-setting-up-slack.html)
* [Enabling single sign-on with Google](10-single-sign-on.html)
* [Creating a Getting Started Guide for your team](11-getting-started-guide.html)
* [Sharing dashboards and questions with public links](12-public-links.html)
* [Embedding Metabase in other Applications](13-embedding.html)

First things first, you'll need to install Metabase. If you haven’t done that yet, our [Installation Guide](https://metabase.com/docs/v0.23/operations-guide/start#installing-and-running-metabase) will help you through the process.

Already done with that? Then let’s start with going over [connecting Metabase to your database](01-managing-databases.html).
