_docs/v0.31/administration-guide/start.md
---
version: v0.31
category: Administration-Guide
title: Start
source_url: 'https://github.com/metabase/metabase/blob/master/docs/administration-guide/start.md'
layout: docs
---

## Administration Guide

Are you in charge of managing Metabase for your organization? Then you're in the right spot. You are the chosen one.

**Getting things set up:**
* [Connecting Metabase to databases in your organization](01-managing-databases.html)
* [Enabling features that send email (SMTP)](02-setting-up-email.html)
* [Setting up Slack integration](09-setting-up-slack.html)
* [Configuring settings](08-configuration-settings.html)
* [Setting formatting defaults for dates and numbers](19-formatting-settings.html)
* [Caching query results](14-caching.html)
* [Customizing how Metabase looks with white labeling<sup>*</sup>](15-whitelabeling.html)

**Curating your data:**
* [Editing your database metadata](03-metadata-editing.html)
* [Creating segments and metrics](07-segments-and-metrics.html)

**Adding and managing users:**
* [Managing user accounts](04-managing-users.html)
* [Authenticating with Google Sign-In or LDAP](10-single-sign-on.html)
* [Authenticating with SAML<sup>*</sup>](16-authenticating-with-saml.html)
* [Authenticating with JWT<sup>*</sup>](18-authenticating-with-jwt.html)

**Setting permissions and access:**
* [Setting data permissions](05-setting-permissions.html)
* [Creating and managing collections](06-collections.html)
* [Sandboxing data based on user attributes<sup>*</sup>](17-data-sandboxes.html)

**Embedding and sharing with public links:**
* [Sharing dashboards and questions with public links](12-public-links.html)
* [Embedding Metabase in other Applications](13-embedding.html)

*&ast; - Available in the Enterprise edition of Metabase*

First things first, you'll need to install Metabase. If you haven’t done that yet, our [Installation Guide](../operations-guide/start.html#installing-and-running-metabase) will help you through the process.

Already done with that? Then let’s start by going over how to [connect Metabase to your database](01-managing-databases.html).
